--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -24,11 +24,11 @@
                     </div>
                 </div>
                 <div class="col-6" *ngIf="bankForm">
-                    <div class="row kt-margin-t-15">
+                    <div class="row">
                         <div class="col-4 form-label">
                             <label class="text-color mandatory my-auto">Final Scrap Amount</label>
                         </div>
-                        <div class="col-8">
+                        <div class="col-6">
                             <input type="text" class="form-control" placeholder="100.00"
                                 formControlName="finalScrapAmountAfterMelting" readonly>
                         </div>
