--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -70,9 +70,13 @@
             <div class="col" *ngIf="showScrapAcknowledgementFlag">
                 <input type="text" class="form-control"  (keyup)= "calculateAfterDeduction()" placeholder="0" formControlName="standardDeduction"
                 numbersOnly
-                [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-            <mat-error *ngIf="controls.standardDeduction.errors?.max || controls.standardDeduction.errors?.min">
+                [class.isError]="controls.standardDeduction.touched || controls.standardDeduction.invalid">
+            <mat-error *ngIf="(controls.standardDeduction.errors?.max || controls.standardDeduction.errors?.min) && controls.standardDeduction.touched">
                 Invalid Number</mat-error>
+                <mat-error
+                *ngIf="controls.standardDeduction.touched && controls.standardDeduction.errors?.required">
+                Field Required
+            </mat-error>
             </div>
             <div class="col form-label" *ngIf="showScrapAcknowledgementFlag">
                 <label>Before Standard Deduction - <span class="currency">
