--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
@@ -52,6 +52,11 @@
                     <mat-cell *matCellDef="let deposit">{{deposit.paymentType | uppercase}}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="paymentFor">
+                    <mat-header-cell *matHeaderCellDef>Payment For</mat-header-cell>
+                    <mat-cell *matCellDef="let deposit">{{deposit.paymentFor| uppercase}}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="depositBankName">
                     <mat-header-cell *matHeaderCellDef>Deposit Bank Name</mat-header-cell>
                     <mat-cell *matCellDef="let deposit">{{deposit.bankName | titlecase}}</mat-cell>
