--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment-log-dialog/part-payment-log-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment-log-dialog/part-payment-log-dialog.component.html
@@ -5,6 +5,7 @@
         <div class="table-div kt-padding-20">
             <table class="table outer-border">
                 <thead>
+                    <th class="transparent" >Transaction ID</th>
                     <th class="transparent">Loan Id</th>
                     <th class="transparent">Loan Amount</th>
                     <th class="transparent">Payment Date</th>
@@ -14,6 +15,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let loanDetail of partPaymentHistory">
+                        <td>{{loanDetail.transactionUniqueId}}</td>
                         <td>
                             {{loanDetail.transactionSplitUp[0].customerLoan?.loanUniqueId}}
                             <br>
