bm::kyc review bug fixes and modal changes,

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
@@ -17,7 +17,11 @@
         flex: 0 0 4%;
     }
 
-    .mat-column-view {
-        flex: 0 0 2%;
+    .mat-column-partReleaseAmountStatus {
+        flex: 0 0 3%;
+    }
+
+    .mat-column-updateStatus {
+        flex: 0 0 5%;
     }
 }
