--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -155,7 +155,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-3  offset-1 form-label">
-                                <label class="mandatory  text-color font-weight-500">PAN</label>
+                                <label class="mandatory  text-color font-weight-500">PAN CARD NUMBER</label>
                             </div>
 
                             <div class="col-8">
