--- a/gold-admin-frontend/src/app/views/pages/broker/customers/customers-list/customers.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/customers/customers-list/customers.component.html
@@ -68,6 +68,8 @@
                     <mat-cell *matCellDef="let element">
                         <span class="text-primary kt-pointer" *ngIf="element?.kycDetails?.panCard.URL;else elseBlock"
                             (click)="open(element.kycDetails.panCard.URL)">View</span>
+                        <!-- <span class="text-primary kt-pointer" *ngIf="element?.kycDetails?.panCard.URL;else elseBlock"
+                            (click)="open(element.kycDetails.panCard.URL)">View</span> -->
                     </mat-cell>
                 </ng-container>
                 <ng-template #blank>-</ng-template>
