bm::changes in lead and payment gateway

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -193,7 +193,7 @@
                         <div class="row kt-padding-t-15" *ngIf="controls.panType.value == 'pan'">
                             <!-- PAN -->
                             <div class="col-4 form-label">
-                                <mat-label>PAN</mat-label>
+                                <mat-label class="mandatory">PAN</mat-label>
                             </div>
 
                             <div [ngClass]="data.action != 'view'?'col-5':'col-8'">
