--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
@@ -10,7 +10,7 @@
                         </mat-checkbox>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let row" class="mat-column-checkbox">
-                        <mat-checkbox *ngIf="!row.isAppraiserAssign" (click)="$event.stopPropagation()"
+                        <mat-checkbox *ngIf="!row.packetAssigned" (click)="$event.stopPropagation()"
                             (change)="$event ? selection.toggle(row) : null" (change)="checkForSameBranch()"
                             [checked]="selection.isSelected(row)">
                         </mat-checkbox>
