--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -255,6 +255,7 @@
 
                             <div class="col-8">
                                 <select class="form-control" formControlName="internalBranchId"
+                                    (change)="patchStateCity($event.target.value)"
                                     [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
                                     <option value="" [disabled]="true" [selected]="true"> Select Internal Branch
                                     </option>
