new scrap bugs fixed

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/add-packets/add-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/add-packets/add-packets.component.html
@@ -35,6 +35,7 @@
                                 </div>
                                 <div class="col-8">
                                     <select class="form-control" formControlName="internalUserBranchId"
+                                        (change)="changeBranch($event)"
                                         [class.isError]="controls.internalUserBranchId.touched && controls.internalUserBranchId.invalid">
                                         <option value="" [disabled]="true" [selected]="true"> Select Branch
                                         </option>
@@ -49,6 +50,32 @@
                                 </div>
 
                             </div>
+                            
+                    <ng-container *ngIf="data.action == 'edit'">
+
+                        <div *ngIf="data.packetData && data.packetData.appraiserId"
+                            class="row justify-content-center kt-margin-t-10">
+                            <div class="col-4 form-label">
+                                <label class="kt-padding-l-10"
+                                    [class.mandatory]="this.data.packetData.appraiserId">Appraiser</label>
+                            </div>
+                            <div class="col-8">
+                                <select class="form-control" formControlName="appraiserId"
+                                    [class.isError]="controls.appraiserId.touched && controls.appraiserId.invalid">
+                                    <option value="" [disabled]="true" [selected]="true"> Select Appraiser
+                                    </option>
+                                    <option *ngFor="let appraiser of appraisers" [value]="appraiser.id">
+                                        {{appraiser.firstName | titlecase}}&nbsp;{{appraiser.lastName | titlecase}}
+                                    </option>
+                                </select>
+                                <mat-error
+                                    *ngIf="controls.appraiserId.touched && controls.appraiserId.errors?.required">
+                                    Required field
+                                </mat-error>
+                            </div>
+
+                        </div>
+                    </ng-container>
 
                             <div class="row justify-content-center kt-margin-t-10">
                                 <div class="col-4 form-label">
@@ -74,8 +101,8 @@
                             <label class="kt-padding-l-10 mandatory">Branch</label>
                         </div>
                         <div class="col-9">
-                            <select name="" id="" class="form-control" formControlName="internalUserBranch"
-                                [class.isError]="csvForm.controls.internalUserBranch.touched && csvForm.controls.internalUserBranch.invalid">
+                            <select name="" id="" class="form-control" formControlName="internalUserBranchId"
+                                [class.isError]="csvForm.controls.internalUserBranchId.touched && csvForm.controls.internalUserBranchId.invalid">
                                 <option value="" [disabled]="true" [selected]="true"> Select Branch
                                 </option>
                                 <option *ngFor="let branch of branches" [value]="branch.id">
@@ -83,11 +110,12 @@
                                 </option>
                             </select>
                             <mat-error
-                                *ngIf="csvForm.controls.internalUserBranch.touched && csvForm.controls.internalUserBranch.errors?.required">
+                                *ngIf="csvForm.controls.internalUserBranchId.touched && csvForm.controls.internalUserBranchId.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
                     </div>
+
 
                     <div class="row kt-margin-t-20">
                         <div class="col-3 form-label">
